Enhance stoplist generation by adding common English stop words filtering and updating execution counts in the notebook. The stoplist now filters out 22 common stop words, with examples displayed in the output. The Python script has been removed in favor of a more integrated notebook approach.

--- a/build_stoplist.ipynb
+++ b/build_stoplist.ipynb
@@ -6,12 +6,14 @@
       "source": [
         "# Build Stoplist - Top 50 Words\n",
         "\n",
-        "This notebook builds a stoplist by analyzing word frequencies across documents in the `docs` directory.\n"
+        "This notebook builds a stoplist by analyzing word frequencies across documents in the `docs` directory.\n",
+        "\n",
+        "**Note:** Only the most common English stop words (the, is, and, in, a, etc.) are filtered out.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -20,16 +22,23 @@
         "DOCS = pathlib.Path(\"docs\")\n",
         "OUT = pathlib.Path(\"stoplist_top50.txt\")\n",
         "\n",
-        "TOKEN_SPLIT = re.compile(r\"[^A-Za-z]+\")\n"
+        "TOKEN_SPLIT = re.compile(r\"[^A-Za-z]+\")\n",
+        "\n",
+        "# Common English stop words to filter out (minimal set)\n",
+        "STOP_WORDS = {\n",
+        "    'a', 'an', 'and', 'are', 'as', 'at', 'be', 'by', 'for', 'from',\n",
+        "    'has', 'in', 'is', 'it', 'of', 'on', 'the', 'to',\n",
+        "    'was', 'were', 'with', 'you'\n",
+        "}\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def build_stoplist_top50():\n",
+        "def build_stoplist_top50(filter_stopwords=True):\n",
         "    counter = collections.Counter()\n",
         "\n",
         "    files = sorted(DOCS.glob(\"*.txt\"))\n",
@@ -41,6 +50,11 @@
         "        # drop header line \"# TITLE: ...\"\n",
         "        txt = re.sub(r\"^# title: .*?\\n\\n\", \"\", txt, flags=re.IGNORECASE)\n",
         "        tokens = [t for t in TOKEN_SPLIT.split(txt) if t and (len(t) > 1 or t in (\"a\", \"i\"))]\n",
+        "        \n",
+        "        # Filter out stop words if requested\n",
+        "        if filter_stopwords:\n",
+        "            tokens = [t for t in tokens if t not in STOP_WORDS]\n",
+        "        \n",
         "        counter.update(tokens)\n",
         "\n",
         "    top50 = counter.most_common(50)\n",
@@ -56,26 +70,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Saved: /Users/ramidaood/UNI/אחזור_1/stoplist_top50.txt\n"
+            "Filtering out 22 common stop words\n",
+            "Examples: a, an, and, are, as, at, be, by, for, from, has, in, is, it, of, on, the, to, was, were...\n"
           ]
         }
       ],
       "source": [
-        "# Run the function to build the stoplist\n",
-        "top50 = build_stoplist_top50()\n",
-        "print(f\"Saved: {OUT.resolve()}\")\n"
+        "# Show which stop words are being filtered\n",
+        "print(f\"Filtering out {len(STOP_WORDS)} common stop words\")\n",
+        "print(f\"Examples: {', '.join(sorted(list(STOP_WORDS))[:20])}...\")\n",
+        "# Run the function to build the stoplist (with stop word filtering)\n",
+        "top50 = build_stoplist_top50(filter_stopwords=True)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -85,56 +102,56 @@
               "\n",
               "| Rank | Word | Count |\n",
               "|------|------|-------|\n",
-              "| 1 | the | 391 |\n",
-              "| 2 | of | 208 |\n",
-              "| 3 | and | 164 |\n",
-              "| 4 | in | 156 |\n",
-              "| 5 | a | 135 |\n",
-              "| 6 | on | 114 |\n",
-              "| 7 | to | 87 |\n",
-              "| 8 | was | 80 |\n",
-              "| 9 | retrieved | 79 |\n",
-              "| 10 | with | 74 |\n",
-              "| 11 | you | 67 |\n",
-              "| 12 | for | 54 |\n",
-              "| 13 | orlandi | 49 |\n",
-              "| 14 | by | 48 |\n",
-              "| 15 | county | 47 |\n",
-              "| 16 | is | 46 |\n",
-              "| 17 | otto | 43 |\n",
-              "| 18 | from | 42 |\n",
-              "| 19 | at | 36 |\n",
-              "| 20 | music | 36 |\n",
-              "| 21 | it | 35 |\n",
-              "| 22 | were | 33 |\n",
-              "| 23 | as | 32 |\n",
-              "| 24 | his | 32 |\n",
-              "| 25 | dance | 29 |\n",
-              "| 26 | chaplin | 29 |\n",
-              "| 27 | route | 25 |\n",
-              "| 28 | census | 24 |\n",
-              "| 29 | so | 24 |\n",
-              "| 30 | an | 21 |\n",
-              "| 31 | can | 21 |\n",
-              "| 32 | or | 20 |\n",
-              "| 33 | espa | 20 |\n",
-              "| 34 | single | 19 |\n",
-              "| 35 | washington | 19 |\n",
-              "| 36 | season | 19 |\n",
-              "| 37 | library | 18 |\n",
-              "| 38 | we | 18 |\n",
-              "| 39 | rave | 18 |\n",
-              "| 40 | july | 17 |\n",
-              "| 41 | not | 17 |\n",
-              "| 42 | de | 17 |\n",
-              "| 43 | government | 17 |\n",
-              "| 44 | archived | 17 |\n",
-              "| 45 | original | 17 |\n",
-              "| 46 | beatport | 17 |\n",
-              "| 47 | think | 17 |\n",
-              "| 48 | state | 16 |\n",
-              "| 49 | has | 16 |\n",
-              "| 50 | columbia | 16 |\n"
+              "| 1 | retrieved | 79 |\n",
+              "| 2 | orlandi | 49 |\n",
+              "| 3 | county | 47 |\n",
+              "| 4 | otto | 43 |\n",
+              "| 5 | music | 36 |\n",
+              "| 6 | his | 32 |\n",
+              "| 7 | dance | 29 |\n",
+              "| 8 | chaplin | 29 |\n",
+              "| 9 | route | 25 |\n",
+              "| 10 | census | 24 |\n",
+              "| 11 | so | 24 |\n",
+              "| 12 | can | 21 |\n",
+              "| 13 | or | 20 |\n",
+              "| 14 | espa | 20 |\n",
+              "| 15 | single | 19 |\n",
+              "| 16 | washington | 19 |\n",
+              "| 17 | season | 19 |\n",
+              "| 18 | library | 18 |\n",
+              "| 19 | we | 18 |\n",
+              "| 20 | rave | 18 |\n",
+              "| 21 | july | 17 |\n",
+              "| 22 | not | 17 |\n",
+              "| 23 | de | 17 |\n",
+              "| 24 | government | 17 |\n",
+              "| 25 | archived | 17 |\n",
+              "| 26 | original | 17 |\n",
+              "| 27 | beatport | 17 |\n",
+              "| 28 | think | 17 |\n",
+              "| 29 | state | 16 |\n",
+              "| 30 | columbia | 16 |\n",
+              "| 31 | walla | 16 |\n",
+              "| 32 | he | 16 |\n",
+              "| 33 | top | 16 |\n",
+              "| 34 | united | 15 |\n",
+              "| 35 | states | 15 |\n",
+              "| 36 | feat | 15 |\n",
+              "| 37 | dancing | 15 |\n",
+              "| 38 | national | 14 |\n",
+              "| 39 | population | 14 |\n",
+              "| 40 | ol | 14 |\n",
+              "| 41 | tracklists | 14 |\n",
+              "| 42 | cerda | 13 |\n",
+              "| 43 | that | 13 |\n",
+              "| 44 | no | 13 |\n",
+              "| 45 | its | 13 |\n",
+              "| 46 | deportivo | 13 |\n",
+              "| 47 | show | 13 |\n",
+              "| 48 | woodstar | 13 |\n",
+              "| 49 | don | 13 |\n",
+              "| 50 | stars | 13 |\n"
             ],
             "text/plain": [
               "<IPython.core.display.Markdown object>"
